WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214806
libwebrtc uint64_t build fixes
https://bugs.webkit.org/show_bug.cgi?id=214806
Summary
libwebrtc uint64_t build fixes
Michael Catanzaro
Reported
2020-07-26 10:54:21 PDT
WebKitGTK currently fails to build with -DENABLE_EXPERIMENTAL_FEATURES=ON because a bunch of libwebrtc headers use integer typedefs without declaring them: In file included from ../../Source/ThirdParty/libwebrtc/Source/webrtc/common_video/h264/pps_parser.cc:11: ../../Source/ThirdParty/libwebrtc/Source/webrtc/common_video/h264/pps_parser.h:33:5: error: ‘uint32_t’ does not name a type; did you mean ‘u_int32_t’? 33 | uint32_t weighted_bipred_idc = false; | ^~~~~~~~ | u_int32_t
Attachments
Patch
(5.41 KB, patch)
2020-07-26 10:59 PDT
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
Patch
(4.67 KB, patch)
2020-07-26 11:06 PDT
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2020-07-26 10:59:17 PDT
Created
attachment 405252
[details]
Patch
Michael Catanzaro
Comment 2
2020-07-26 11:04:32 PDT
(I wonder if anyone here has an account on libwebrtc's gerrit and would be willing to send it upstream...?)
Michael Catanzaro
Comment 3
2020-07-26 11:06:14 PDT
Created
attachment 405253
[details]
Patch
youenn fablet
Comment 4
2020-07-26 12:04:50 PDT
Would be good to upstream otherwise this might get overwritten at next resync.
EWS
Comment 5
2020-07-26 12:10:04 PDT
Committed
r264904
: <
https://trac.webkit.org/changeset/264904
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 405253
[details]
.
Radar WebKit Bug Importer
Comment 6
2020-07-26 12:11:14 PDT
<
rdar://problem/66133368
>
Michael Catanzaro
Comment 7
2020-07-26 12:42:55 PDT
(In reply to Michael Catanzaro from
comment #2
)
> (I wonder if anyone here has an account on libwebrtc's gerrit and would be > willing to send it upstream...?)
youenn fablet
Comment 8
2020-11-06 06:37:49 PST
(In reply to youenn fablet from
comment #4
)
> Would be good to upstream otherwise this might get overwritten at next > resync.
As per
https://bugs.webkit.org/show_bug.cgi?id=218436
, this actually happened. If you cannot upstream the changes, please add #if defined(WEBRTC_WEBKIT_BUILD) so that there is a chance to keep these changes at next resync.
Michael Catanzaro
Comment 9
2020-11-06 08:25:30 PST
OK
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug