Source/ThirdParty/libwebrtc/Source/webrtc/common_video/h264/pps_parser.h
@@ -13,6 +13,8 @@
 
 #include "absl/types/optional.h"
 
+#include <cstdint>
+
 namespace rtc {
 class BitBuffer;
 }
